--- a/github-dataset-splitting.ipynb
+++ b/github-dataset-splitting.ipynb
@@ -12,8 +12,8 @@
     "It contains JSONs of Pull Request (file paths, comments, and diffs, among other things) from  mined from permissively-licensed GitHub public projects with at least 25 stars and 25 pull requests submitted at the time of access and covers Go, Java, JavaScript, TypeScript, and Python.\n",
     "\n",
     "## Data pipeline\n",
-    "The task of this notebook is to ingest each Pull Request in the dataset, embed it using a feature extraction model, and upload it to a vector database in order to enable Retrieval Augmented Generation (RAG).\n",
-    "Given the size of the overall dataset (over 30GB), this notebook will focus on the JavaScript portion of the dataset as a proof of concept."
+    "The task of this notebook is to ingest each Pull Request in the dataset, embed it using a feature extraction model, and upload it to a vector database for Retrieval Augmented Generation (RAG).\n",
+    "Given the size of the overall dataset (over 30GB), this notebook will focus on the JavaScript subdataset as a proof of concept."
    ]
   },
   {
@@ -23,7 +23,7 @@
     "### Data treatment\n",
     "Some level of treatment of the data is necessary given that:\n",
     "- All the data is present in a single json file, which is a barrier to parallelization of the embeddings upload\n",
-    "- And although they fit the 25 start and 25 pull request requirement to be mined, for various reasons including PRs not being related to code covered by the dataset, some repositories present in the dataset had no data\n",
+    "- And although they fit the 25 stars and 25 pull request requirement to be mined, for various reasons including PRs not being related to code covered by the dataset, some repositories present in the dataset had no data\n",
     "\n",
     "So in this notebook the subdataset is split into a json file for each repository in a manner that will facilitate future data processing pipelines of those files."
    ]
