organizing datasets in another disk for storage optimization

--- a/github-dataset-splitting.ipynb
+++ b/github-dataset-splitting.ipynb
@@ -37,7 +37,7 @@
     "from tqdm.auto import tqdm\n",
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_json('dataset/mined-comments-25stars-25prs-JavaScript.json/mined-comments-25stars-25prs-JavaScript.json', orient='index')"
+    "df = pd.read_json('D:/GitHub/review-owl-datasets/dataset/mined-comments-25stars-25prs-JavaScript.json/mined-comments-25stars-25prs-JavaScript.json', orient='index')"
    ]
   },
   {
@@ -177,12 +177,12 @@
     "# create repo-split folder\n",
     "import os\n",
     "\n",
-    "if not os.path.exists('dataset/mined-comments-25stars-25prs-JavaScript.json/repo-split'):\n",
+    "if not os.path.exists('D:/GitHub/review-owl-datasets/dataset/mined-comments-25stars-25prs-JavaScript.json/repo-split'):\n",
     "    os.makedirs('dataset/mined-comments-25stars-25prs-JavaScript.json/repo-split')\n",
     "\n",
     "# saving each df to a json file with the repository name as the file name with i in the name so we know the order from the most to the least columns\n",
     "for i in tqdm(range(len(dfs)), 'Saving dataframes to json files'):\n",
-    "    dfs[i].to_json('dataset/mined-comments-25stars-25prs-JavaScript.json/repo-split/' + str(i+1) + '-' + dfs[i].index[0] + '.json')"
+    "    dfs[i].to_json('D:/GitHub/review-owl-datasets/dataset/mined-comments-25stars-25prs-JavaScript.json/repo-split/' + str(i+1) + '-' + dfs[i].index[0] + '.json')"
    ]
   },
   {
