code for using a postgresql database locally

--- a/github-dataset-embedding-and-uploading.ipynb
+++ b/github-dataset-embedding-and-uploading.ipynb
@@ -21,18 +21,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
     "import os\n",
+    "import logging\n",
+    "\n",
+    "logging.basicConfig(filename='embedding_progress.log', level=logging.INFO, format='%(asctime)s - %(levelname)s - %(message)s')\n",
     "\n",
     "load_dotenv()\n",
     "\n",
     "PINECONE_API_KEY = os.getenv('PINECONE_API_KEY')\n",
     "HUGGINGFACE_API_KEY = os.getenv('HUGGINGFACE_API_KEY')\n",
+    "POSTGRESQL_USER = os.getenv('POSTGRESQL_USER')\n",
     "POSTGRESQL_PASSWORD = os.getenv('POSTGRESQL_PASSWORD')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Connect to the PostgreSQL Database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import psycopg2 as pg\n",
+    "\n",
+    "conn = pg.connect(\n",
+    "    dbname=\"postgres\",\n",
+    "    user=POSTGRESQL_USER,\n",
+    "    password=POSTGRESQL_PASSWORD,\n",
+    "    host=\"localhost\",\n",
+    "    port=\"5432\"\n",
+    ")\n",
+    "conn.autocommit = True\n",
+    "\n",
+    "# Create a cursor object for SQL operations.\n",
+    "cur = conn.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('PostgreSQL 16.0, compiled by Visual C++ build 1935, 64-bit',)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# test connection\n",
+    "cur.execute(\"SELECT version();\")\n",
+    "cur.fetchone()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cur.execute(\"ROLLBACK\")\n",
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create a database for the project"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check if the database already exists, and create it if not.\n",
+    "cur.execute(\"SELECT 1 FROM pg_catalog.pg_database WHERE datname = 'review_owl';\")\n",
+    "exists = cur.fetchall()\n",
+    "\n",
+    "if not exists:\n",
+    "    logging.info(\"Creating database\")\n",
+    "    cur.execute(\"CREATE DATABASE review_owl;\")\n",
+    "    conn.commit()\n",
+    "\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Connect to the project database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Switch to the new database.\n",
+    "conn = pg.connect(\n",
+    "    dbname=\"review_owl\",\n",
+    "    user=POSTGRESQL_USER,\n",
+    "    password=POSTGRESQL_PASSWORD,\n",
+    "    host=\"localhost\",\n",
+    "    port=\"5432\"\n",
+    ")\n",
+    "conn.autocommit = True\n",
+    "\n",
+    "# Create a cursor object for SQL operations.\n",
+    "cur = conn.cursor()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create a Table for PR Information"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check if the table already exists, and create it if not.\n",
+    "cur.execute(\"\"\"\n",
+    "    CREATE TABLE IF NOT EXISTS pr_info (\n",
+    "        pr_vector_id TEXT PRIMARY KEY,\n",
+    "        pr_id INT UNIQUE,\n",
+    "        pr_repo_name TEXT,\n",
+    "        pr_html_url TEXT,\n",
+    "        pr_file_path TEXT,\n",
+    "        pr_line INT,\n",
+    "        pr_user TEXT,\n",
+    "        pr_diff_hunk TEXT,\n",
+    "        pr_body TEXT,\n",
+    "        pr_commit_id TEXT,\n",
+    "        pr_language TEXT\n",
+    "    );\n",
+    "\"\"\")\n",
+    "\n",
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Function for inserting and updating rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to insert or update rows in the pr_info table.\n",
+    "def insert_or_update_pr_info(vector_id: str, pr_id: int, repo_name: str, html_url: str, file_path: str, line: int, user: str, diff_hunk: str, body: str, commit_id: str, language: str):\n",
+    "    try:\n",
+    "        cur.execute(\"\"\"\n",
+    "            INSERT INTO pr_info (pr_vector_id, pr_id, pr_repo_name, pr_html_url, pr_file_path, pr_line, pr_user, pr_diff_hunk, pr_body, pr_commit_id, pr_language)\n",
+    "            VALUES (%s, %s, %s, %s, %s, %s, %s, %s, %s, %s, %s);\n",
+    "        \"\"\", (vector_id, pr_id, repo_name, html_url, file_path, line, user, diff_hunk, body, commit_id, language))\n",
+    "        conn.commit()\n",
+    "        return True\n",
+    "    except Exception as e:\n",
+    "        conn.rollback()\n",
+    "        logging.error(e)\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# test insert\n",
+    "# insert_or_update_pr_info(\"plotly@plotly.js-a847cbece4e1be026e0a4fbe7f65c3f5acd09acabd9e2c724bb13b4dfd746f68\", 44735997, \"plotly@plotly.js\", \"https://github.com/plotly/plotly.js/pull/1#discussion_r44735997\", \"devtools/test_dashboard/server.js\", 36, \"etpinard\", \"@@ -1,89 +1,53 @@\\n-var http = require('http');\\n-var ecstatic = require('ecstatic');\\n-var browserify = require('browserify');\\n-var open = require('open');\\n var fs = require('fs');\\n-var watchify = require('watchify');\\n+var http = require('http');\\n var path = require('path');\\n-var outpipe = require('outpipe');\\n-var outfile = path.join(__dirname, '../shelly/plotlyjs/static/plotlyjs/build/plotlyjs-bundle.js');\\n-\\n-var testFile = './test';\\n-\\n-switch(process.argv[2]) {\\n-  case 'geo':\\n-    testFile = './test-geo';\\n-  break;\\n-  case '2d':\\n-    testFile = './test-2d';\\n-  break;\\n-}\\n-\\n-console.log('using ' + testFile);\\n-\\n-var b = browserify(path.join(__dirname, '../shelly/plotlyjs/static/plotlyjs/src/plotly.js'), {\\n-  debug: true,\\n-  verbose: true,\\n-  standalone: 'Plotly',\\n-  transform: path.join(__dirname, '../shelly/plotlyjs/static/plotlyjs/compress_attributes.js'),\\n-  cache: {},\\n-  packageCache: {}\\n-});\\n-\\n-\\n-var w = watchify(b);\\n \\n-var bytes, time;\\n-w.on('bytes', function (b) { bytes = b });\\n-w.on('time', function (t) { time = t });\\n-\\n-w.on('update', bundle);\\n-bundle();\\n+var browserify = require('browserify');\\n+var ecstatic = require('ecstatic');\\n+var _open = require('open');\\n \\n-var firstBundle = true;\\n+var makeWatchifiedBundle = require('../../tasks/util/make_watchified_bundle');\\n+var shortcutPaths = require('../../tasks/util/shortcut_paths');\\n+var constants = require('../../tasks/util/constants');\\n \\n-function bundle () {\\n-    var didError = false;\\n-    var outStream = process.platform === 'win32'\\n-        ? fs.createWriteStream(outfile)\\n-        : outpipe(outfile);\\n \\n-    var wb = w.bundle();\\n-    wb.on('error', function (err) {\\n-        console.error(String(err));\\n-        didError = true;\\n-        outStream.end('console.error('+JSON.stringify(String(err))+');');\\n-    });\\n-    wb.pipe(outStream);\\n+// TODO make this an optional argument\\n+var PORT = '8080';\\n \\n-    outStream.on('error', function (err) {\\n-        console.error(err);\\n-    });\\n-    outStream.on('close', function () {\\n-        if (!didError) {\\n-            console.error(bytes + ' bytes written to ' + outfile\\n-                + ' (' + (time / 1000).toFixed(2) + ' seconds)'\\n-            );\\n-            if(firstBundle) {\\n-              open('http://localhost:8080/test-dashboard');\\n-              firstBundle = false;\\n-            }\\n-        }\\n-    });\\n+var testFile;\\n+switch(process.argv[2]) {\\n+    case 'geo':\\n+        testFile = './test-geo';\\n+    break;\\n+    case '2d':\\n+        testFile = './test-2d';\\n+    break;\\n+    default:\\n+        testFile = './test-3d';\\n }\\n \\n-////// build the test examples\\n+console.log('Using ' + testFile);\\n+console.log('Listening on :' + PORT + '\\\\n');\\n \\n-fs.unlink('./test-bundle.js', function(error) {\\n-    browserify({\\n+// watch plotly.js\\n+var watchifiedBundle = makeWatchifiedBundle(function onFirstBundleCallback() {\\n+    _open('http://localhost:' + PORT + '/devtools/test_dashboard');\\n+});\\n+watchifiedBundle();\", \"the test dashboard server script uses the same watch-bundling machinery as `npm run watch` \\n:palm_tree: :palm_tree: \\n\", \"2abf31f5cb19b7cca9a4944ee506fe716ec44442\", \"JavaScript\")"
    ]
   },
   {
@@ -97,12 +295,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sentence_transformers import SentenceTransformer\n",
-    "# model = SentenceTransformer('BAAI/bge-large-en-v1.5')\n",
-    "model = SentenceTransformer('BAAI/bge-small-en-v1.5')\n",
+    "# from sentence_transformers import SentenceTransformer\n",
+    "# # model = SentenceTransformer('BAAI/bge-large-en-v1.5')\n",
+    "# model = SentenceTransformer('BAAI/bge-small-en-v1.5')\n",
     "\n",
-    "# alternative embedding model to consider\n",
-    "# model = SentenceTransformer('BAAI/llm-embedder')"
+    "# # alternative embedding model to consider\n",
+    "# # model = SentenceTransformer('BAAI/llm-embedder')"
    ]
   },
   {
@@ -156,9 +354,6 @@
     "import time\n",
     "import random\n",
     "import itertools\n",
-    "import logging\n",
-    "\n",
-    "logging.basicConfig(filename='embedding_progress.log', level=logging.INFO, format='%(asctime)s - %(levelname)s - %(message)s')\n",
     "\n",
     "# API_URL = \"https://api-inference.huggingface.co/models/BAAI/bge-base-en-v1.5\"\n",
     "# API_URL = \"https://api-inference.huggingface.co/models/BAAI/bge-large-en-v1.5\"\n",
@@ -516,7 +711,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_paths = import_filepaths('dataset/mined-comments-25stars-25prs-JavaScript.json/repo-split/*.json')\n",
+    "file_paths = import_filepaths('D:/GitHub/review-owl-datasets/dataset/mined-comments-25stars-25prs-JavaScript.json/repo-split/*.json')\n",
     "process_files_with_threads(file_names=file_paths, num_threads=1, end=500)"
    ]
   }
