code for saving data in the postgresql database and checking data consistency

--- a/github-dataset-embedding-and-uploading.ipynb
+++ b/github-dataset-embedding-and-uploading.ipynb
@@ -214,23 +214,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# test insert\n",
-    "# insert_or_update_pr_info(\"plotly@plotly.js-a847cbece4e1be026e0a4fbe7f65c3f5acd09acabd9e2c724bb13b4dfd746f68\", 44735997, \"plotly@plotly.js\", \"https://github.com/plotly/plotly.js/pull/1#discussion_r44735997\", \"devtools/test_dashboard/server.js\", 36, \"etpinard\", \"@@ -1,89 +1,53 @@\\n-var http = require('http');\\n-var ecstatic = require('ecstatic');\\n-var browserify = require('browserify');\\n-var open = require('open');\\n var fs = require('fs');\\n-var watchify = require('watchify');\\n+var http = require('http');\\n var path = require('path');\\n-var outpipe = require('outpipe');\\n-var outfile = path.join(__dirname, '../shelly/plotlyjs/static/plotlyjs/build/plotlyjs-bundle.js');\\n-\\n-var testFile = './test';\\n-\\n-switch(process.argv[2]) {\\n-  case 'geo':\\n-    testFile = './test-geo';\\n-  break;\\n-  case '2d':\\n-    testFile = './test-2d';\\n-  break;\\n-}\\n-\\n-console.log('using ' + testFile);\\n-\\n-var b = browserify(path.join(__dirname, '../shelly/plotlyjs/static/plotlyjs/src/plotly.js'), {\\n-  debug: true,\\n-  verbose: true,\\n-  standalone: 'Plotly',\\n-  transform: path.join(__dirname, '../shelly/plotlyjs/static/plotlyjs/compress_attributes.js'),\\n-  cache: {},\\n-  packageCache: {}\\n-});\\n-\\n-\\n-var w = watchify(b);\\n \\n-var bytes, time;\\n-w.on('bytes', function (b) { bytes = b });\\n-w.on('time', function (t) { time = t });\\n-\\n-w.on('update', bundle);\\n-bundle();\\n+var browserify = require('browserify');\\n+var ecstatic = require('ecstatic');\\n+var _open = require('open');\\n \\n-var firstBundle = true;\\n+var makeWatchifiedBundle = require('../../tasks/util/make_watchified_bundle');\\n+var shortcutPaths = require('../../tasks/util/shortcut_paths');\\n+var constants = require('../../tasks/util/constants');\\n \\n-function bundle () {\\n-    var didError = false;\\n-    var outStream = process.platform === 'win32'\\n-        ? fs.createWriteStream(outfile)\\n-        : outpipe(outfile);\\n \\n-    var wb = w.bundle();\\n-    wb.on('error', function (err) {\\n-        console.error(String(err));\\n-        didError = true;\\n-        outStream.end('console.error('+JSON.stringify(String(err))+');');\\n-    });\\n-    wb.pipe(outStream);\\n+// TODO make this an optional argument\\n+var PORT = '8080';\\n \\n-    outStream.on('error', function (err) {\\n-        console.error(err);\\n-    });\\n-    outStream.on('close', function () {\\n-        if (!didError) {\\n-            console.error(bytes + ' bytes written to ' + outfile\\n-                + ' (' + (time / 1000).toFixed(2) + ' seconds)'\\n-            );\\n-            if(firstBundle) {\\n-              open('http://localhost:8080/test-dashboard');\\n-              firstBundle = false;\\n-            }\\n-        }\\n-    });\\n+var testFile;\\n+switch(process.argv[2]) {\\n+    case 'geo':\\n+        testFile = './test-geo';\\n+    break;\\n+    case '2d':\\n+        testFile = './test-2d';\\n+    break;\\n+    default:\\n+        testFile = './test-3d';\\n }\\n \\n-////// build the test examples\\n+console.log('Using ' + testFile);\\n+console.log('Listening on :' + PORT + '\\\\n');\\n \\n-fs.unlink('./test-bundle.js', function(error) {\\n-    browserify({\\n+// watch plotly.js\\n+var watchifiedBundle = makeWatchifiedBundle(function onFirstBundleCallback() {\\n+    _open('http://localhost:' + PORT + '/devtools/test_dashboard');\\n+});\\n+watchifiedBundle();\", \"the test dashboard server script uses the same watch-bundling machinery as `npm run watch` \\n:palm_tree: :palm_tree: \\n\", \"2abf31f5cb19b7cca9a4944ee506fe716ec44442\", \"JavaScript\")"
+    "# insert_or_update_pr_info(\"\", 44735997, \"plotly@plotly.js\", \"https://github.com/plotly/plotly.js/pull/1#discussion_r44735997\", \"devtools/test_dashboard/server.js\", 36, \"etpinard\", \"@@ -1,89 +1,53 @@\\n-var http = require('http');\\n-var ecstatic = require('ecstatic');\\n-var browserify = require('browserify');\\n-var open = require('open');\\n var fs = require('fs');\\n-var watchify = require('watchify');\\n+var http = require('http');\\n var path = require('path');\\n-var outpipe = require('outpipe');\\n-var outfile = path.join(__dirname, '../shelly/plotlyjs/static/plotlyjs/build/plotlyjs-bundle.js');\\n-\\n-var testFile = './test';\\n-\\n-switch(process.argv[2]) {\\n-  case 'geo':\\n-    testFile = './test-geo';\\n-  break;\\n-  case '2d':\\n-    testFile = './test-2d';\\n-  break;\\n-}\\n-\\n-console.log('using ' + testFile);\\n-\\n-var b = browserify(path.join(__dirname, '../shelly/plotlyjs/static/plotlyjs/src/plotly.js'), {\\n-  debug: true,\\n-  verbose: true,\\n-  standalone: 'Plotly',\\n-  transform: path.join(__dirname, '../shelly/plotlyjs/static/plotlyjs/compress_attributes.js'),\\n-  cache: {},\\n-  packageCache: {}\\n-});\\n-\\n-\\n-var w = watchify(b);\\n \\n-var bytes, time;\\n-w.on('bytes', function (b) { bytes = b });\\n-w.on('time', function (t) { time = t });\\n-\\n-w.on('update', bundle);\\n-bundle();\\n+var browserify = require('browserify');\\n+var ecstatic = require('ecstatic');\\n+var _open = require('open');\\n \\n-var firstBundle = true;\\n+var makeWatchifiedBundle = require('../../tasks/util/make_watchified_bundle');\\n+var shortcutPaths = require('../../tasks/util/shortcut_paths');\\n+var constants = require('../../tasks/util/constants');\\n \\n-function bundle () {\\n-    var didError = false;\\n-    var outStream = process.platform === 'win32'\\n-        ? fs.createWriteStream(outfile)\\n-        : outpipe(outfile);\\n \\n-    var wb = w.bundle();\\n-    wb.on('error', function (err) {\\n-        console.error(String(err));\\n-        didError = true;\\n-        outStream.end('console.error('+JSON.stringify(String(err))+');');\\n-    });\\n-    wb.pipe(outStream);\\n+// TODO make this an optional argument\\n+var PORT = '8080';\\n \\n-    outStream.on('error', function (err) {\\n-        console.error(err);\\n-    });\\n-    outStream.on('close', function () {\\n-        if (!didError) {\\n-            console.error(bytes + ' bytes written to ' + outfile\\n-                + ' (' + (time / 1000).toFixed(2) + ' seconds)'\\n-            );\\n-            if(firstBundle) {\\n-              open('http://localhost:8080/test-dashboard');\\n-              firstBundle = false;\\n-            }\\n-        }\\n-    });\\n+var testFile;\\n+switch(process.argv[2]) {\\n+    case 'geo':\\n+        testFile = './test-geo';\\n+    break;\\n+    case '2d':\\n+        testFile = './test-2d';\\n+    break;\\n+    default:\\n+        testFile = './test-3d';\\n }\\n \\n-////// build the test examples\\n+console.log('Using ' + testFile);\\n+console.log('Listening on :' + PORT + '\\\\n');\\n \\n-fs.unlink('./test-bundle.js', function(error) {\\n-    browserify({\\n+// watch plotly.js\\n+var watchifiedBundle = makeWatchifiedBundle(function onFirstBundleCallback() {\\n+    _open('http://localhost:' + PORT + '/devtools/test_dashboard');\\n+});\\n+watchifiedBundle();\", \"the test dashboard server script uses the same watch-bundling machinery as `npm run watch` \\n:palm_tree: :palm_tree: \\n\", \"2abf31f5cb19b7cca9a4944ee506fe716ec44442\", \"JavaScript\")"
    ]
   },
   {
@@ -242,9 +242,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\louis\\anaconda3\\envs\\MachineLearning\\Lib\\site-packages\\pinecone\\index.py:4: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
+      "  from tqdm.autonotebook import tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import pinecone\n",
     "\n",
@@ -263,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,9 +282,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'dimension': 384,\n",
+       " 'index_fullness': 0.0,\n",
+       " 'namespaces': {},\n",
+       " 'total_vector_count': 0}"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "PINECONE_POOL_THREADS = 30\n",
     "index = pinecone.Index('review-owl', pool_threads=PINECONE_POOL_THREADS)\n",
@@ -312,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,40 +451,65 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Functions for generating the info that will be saved in the database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import hashlib\n",
+    "\n",
+    "def hash_id(id):\n",
+    "    return hashlib.sha256(id.encode('utf-8')).hexdigest()\n",
+    "\n",
+    "# Function to check if vector ID matches PR information.\n",
+    "def check_vector_id_match(repo_name: str, pr_id: int, vector_id: str):\n",
+    "    gen_id = repo_name + '-' + hash_id(repo_name + str(pr_id))\n",
+    "    return gen_id == vector_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_pr_info(file_path: str, generated_vector_data: list[tuple[str, list, dict]], language: str):\n",
+    "    pr_info = []\n",
+    "\n",
+    "    data = pd.read_json(file_path, orient='index')\n",
+    "\n",
+    "    for i, row in tqdm(enumerate(data.iloc[:, 0]), 'Generating PR info'):\n",
+    "        if (check_vector_id_match(data.columns[0], row['id'], generated_vector_data[i][0])):\n",
+    "            # (vector_id, pr_id, repo_name, html_url, file_path, line, user, diff_hunk, body, commit_id, language)\n",
+    "            pr_info.append({'vector_id': generated_vector_data[i][0], 'pr_id': row['id'], 'repo_name': data.columns[0], 'html_url': row['html_url'], 'file_path': row['path'], 'line': row['line'], 'user': row['user'], 'diff_hunk': row['diff_hunk'], 'body': row['body'], 'commit_id': row['commit_id'], 'language': language})\n",
+    "        else:\n",
+    "            raise Exception('Vector IDs dont match')\n",
+    "\n",
+    "    return pr_info"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Functions that go from raw data to processed embeddings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
     "import threading\n",
     "import queue\n",
-    "import hashlib\n",
     "\n",
     "def measure_metadata_size(metadata_list: list[dict]):\n",
     "    return [len(str(metadata)) for metadata in metadata_list]\n",
-    "\n",
-    "def truncate_metadata(metadata: dict, size: int):\n",
-    "    repo_len = len(str(metadata['repo']))\n",
-    "    path_len = len(str(metadata['path']))\n",
-    "    diff_len = len(str(metadata['diff']))\n",
-    "    body_len = len(str(metadata['body']))\n",
-    "    total_len = repo_len + path_len + diff_len + body_len\n",
-    "\n",
-    "    if (total_len - diff_len < size):\n",
-    "        truncated_metadata = {'id': metadata['id'], 'repo': metadata['repo'], 'path': metadata['path'], 'diff': metadata['diff'][:size - (total_len - size)], 'body': metadata['body']}\n",
-    "        logging.warning(f\"Truncated diff from {diff_len} to {size - (total_len - size)} bytes.\")\n",
-    "    elif (total_len - body_len < size):\n",
-    "        truncated_metadata = {'id': metadata['id'], 'repo': metadata['repo'], 'path': metadata['path'], 'diff': metadata['diff'], 'body': metadata['body'][:size - (total_len - size)]}\n",
-    "        logging.warning(f\"Truncated body from {diff_len} to {size - (total_len - size)} bytes.\")\n",
-    "    else:\n",
-    "        truncated_metadata = {'id': metadata['id'], 'repo': metadata['repo'], 'path': metadata['path']}\n",
-    "        logging.error(f\"Neither the diff nor the body can be truncated to fit the size of {size} bytes.\")\n",
-    "\n",
-    "    return truncated_metadata\n",
     "\n",
     "def generate_metadata(file_path: str):\n",
     "    metadata_list = []\n",
@@ -473,18 +521,14 @@
     "    metadata_size_list = measure_metadata_size(metadata_list)\n",
     "    for metadata_size in metadata_size_list:\n",
     "        if (metadata_size > 40960):\n",
-    "            logging.warning(f\"Warning: Metadata size is greater than 40960 bytes at {metadata_size} bytes at index: {metadata_size_list.index(metadata_size)}.\\nfile: {file_path}.\")\n",
-    "            metadata_list[metadata_size_list.index(metadata_size)] = truncate_metadata(metadata_list[metadata_size_list.index(metadata_size)], 40960)\n",
+    "            logging.error(f\"Metadata size is greater than 40960 bytes at {metadata_size} bytes at index: {metadata_size_list.index(metadata_size)}.\\nfile: {file_path}.\")\n",
     "\n",
     "    return metadata_list\n",
-    "\n",
-    "def hash_id(id):\n",
-    "    return hashlib.sha256(id.encode('utf-8')).hexdigest()\n",
     "\n",
     "def generate_vector_ids(metadata_list: list[dict]):\n",
     "    ids = []\n",
     "    for i in range(len(metadata_list)):\n",
-    "        ids.append(metadata_list[i]['repo'] + '-' + hash_id(metadata_list[i]['repo'] + metadata_list[i]['id']))\n",
+    "        ids.append(metadata_list[i]['repo'] + '-' + hash_id(metadata_list[i]['repo'] + str(metadata_list[i]['id'])))\n",
     "    return ids\n",
     "\n",
     "def embed_file(file_path: str):\n",
@@ -518,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,6 +594,10 @@
     "\n",
     "        for chunk in tqdm(upsert_data_chunks, 'Uploading data to Pinecone'):\n",
     "            index.upsert(chunk)\n",
+    "\n",
+    "        for row in generate_pr_info(file_path, upsert_data, 'JavaScript'):\n",
+    "            # (vector_id, pr_id, repo_name, html_url, file_path, line, user, diff_hunk, body, commit_id, language)\n",
+    "            insert_or_update_pr_info(row['vector_id'], row['id'], row['repo'], row['html_url'], row['path'], row['line'], row['user'], row['diff'], row['body'], row['commit_id'], row['language'])\n",
     "        \n",
     "        logging.info(f\"Logging: {file_path} processed\")\n",
     "\n",
@@ -598,26 +646,54 @@
    "outputs": [],
    "source": [
     "# # For testing\n",
-    "# file_paths = import_filepaths('dataset/mined-comments-25stars-25prs-JavaScript.json/repo-split/*.json')\n",
-    "# e0 = file_to_embedding_inputs(file_paths[500])\n"
+    "# file_paths = import_filepaths('D:/GitHub/review-owl-datasets/dataset/mined-comments-25stars-25prs-JavaScript.json/repo-split/*.json')\n",
+    "# e0 = file_to_embedding_inputs(file_paths[500])\n",
+    "# u1 = generate_upsert_data(file_paths[500])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c64118aeb5e348939a14ab31a15ec67a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Making requests to HuggingFace API:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# e1 = huggingface_inference_api_request(e0, 200)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# m1 = generate_metadata(file_paths[500])"
+    "# m1 = generate_metadata(file_paths[500])\n",
+    "# type(m1[0]['id'])"
    ]
   },
   {
@@ -631,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,11 +725,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "<class 'tuple'>\n",
+      "<class 'str'>\n",
+      "<class 'list'>\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
    "source": [
-    "# len(z1)"
+    "# print(type(z1))\n",
+    "# print(type(z1[0]))\n",
+    "# print(type(z1[0][0]))\n",
+    "# print(type(z1[0][1]))\n",
+    "# print(type(z1[0][2]))"
    ]
   },
   {
@@ -698,9 +790,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'dimension': 384,\n",
+       " 'index_fullness': 0.0,\n",
+       " 'namespaces': {},\n",
+       " 'total_vector_count': 0}"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "index.describe_index_stats()"
    ]
@@ -712,7 +818,7 @@
    "outputs": [],
    "source": [
     "file_paths = import_filepaths('D:/GitHub/review-owl-datasets/dataset/mined-comments-25stars-25prs-JavaScript.json/repo-split/*.json')\n",
-    "process_files_with_threads(file_names=file_paths, num_threads=1, end=500)"
+    "process_files_with_threads(file_names=file_paths, num_threads=1, start=500, end=510)"
    ]
   }
  ],
